# GoesM_humble_robot

./: .gitignore  asan_colcon.py  common_colcon.py  launch_GoesM_robot_real_world.sh  launch_GoesM_robot_simulator.sh  launch_async_slam.sh  launch_gazebo.sh  launch_nav2.sh  launch_nav2_bringup.sh  launch_rviz.sh  launch_sync_slam.sh  readme.md
my_bringup/: setup.py
my_bringup/launch/: simulator_gazebo_nav2_slam_launch.py
quick_use/: Nav2Goal.sh  cmd_vel_move.sh  cmd_vel_stop.sh  goal_pose.sh  nav_initpose.sh
src/my_bringup/: CMakeLists.txt  package.xml  setup.py
src/my_bringup/launch/: real_robot_nav2_slam_launch.py  simulator_gazebo_nav2_slam_launch.py
